navbar now is fixed to the top on mobile

--- a/src/scss/partials/_hero.scss
+++ b/src/scss/partials/_hero.scss
@@ -242,7 +242,7 @@
       flex-direction: column;
       justify-content: center;
       align-items: center;
-      padding-top: 2rem;
+      padding-top: 10rem;
     }
   
     &__content {
