--- a/src/scss/partials/_projects.scss
+++ b/src/scss/partials/_projects.scss
@@ -127,3 +127,9 @@
     }
   }
 }
+
+@media (max-width: 55em) {
+  .projects {
+    padding-top: 10rem;
+  }
+}
