--- a/src/scss/partials/_services.scss
+++ b/src/scss/partials/_services.scss
@@ -166,6 +166,9 @@
 }
 
 @media (max-width: 55em) {
-  .service {
+  .services {
+    &__container {
+      padding-top: 10rem;
+    }
   }
 }
